--- a/面试题整理.md
+++ b/面试题整理.md
@@ -524,7 +524,7 @@
 
  1. ## TCP为什么需要三次握手？两次不行？ 
 
-     	![20210405225641324](20210405225641324.png)
+     	![20210405225641324](image/20210405225641324.png)
 
     ​	TCP/IP 协议是传输层的一个面向连接的安全可靠的一个传输协议，三次握手的机制是为了保证能建立一个安全可靠的连接，那么第一次握手是由客户端发起，客户端会向服务端发送一个报文，在报文里面：SYN标志位置为1，表示发起新的连接。此时客户端处于 SYN_Sent 状态，等待服务端确认。 当服务端收到这个报文之后就知道客户端要和我建立一个新的连接，于是服务端会为这个TCP 连接分配缓存和变量（缓存指的是一个字节流队列），然后向客户端发送一个确认消息包，在这个消息包里面：ACK标志位置为1，表示确认客户端发起的第一次连接请求。 此时服务端进入SYN_REVD状态。 第三次握手就是当客户端收到服务端发送的确认响应报文之后，还要继续去给服务端进行回应，也是一个ack标志位置1的确认消息。通过以上三次连接，不管是客户端还是服务端，都知道我既能给对方发送消息，也能收到对方的响应。那么，这个连接就被安全的建了。  
 
@@ -541,7 +541,7 @@
 
 2. ## TCP为什么需要四次挥手？三次不行？ 
 
-   ​	![20210406012728597](20210406012728597.png) 	第一次挥手客户端会发起一个报文，在报文里面FIN标志位置1；当服务端收到这报文之后，我就知道了客户端想要和我断开连接，但是此时服务端不一定能做好准备，因为当客户端发起断开连接的时候，对于服务端而言它极有可能有未发送完的的消息，它还要继续发送；
+   ​	![20210406012728597](image/20210406012728597.png) 	第一次挥手客户端会发起一个报文，在报文里面FIN标志位置1；当服务端收到这报文之后，我就知道了客户端想要和我断开连接，但是此时服务端不一定能做好准备，因为当客户端发起断开连接的时候，对于服务端而言它极有可能有未发送完的的消息，它还要继续发送；
 
    ​	第二次挥手对于服务端而言他只能进行一个消息确认，我先告诉服务端，我知道你要和我断开连接了，但是我这还可能没有做好准备，你还需要等我一下，等会我会告诉你；
 
@@ -704,7 +704,7 @@
 
      设A向B发送数据。在连接建立时，B告诉了A：“我的接收窗口是 rwnd = 400 ”(这里的 rwnd 表示 receiver window) 。因此，发送方的发送窗口不能超过接收方给出的接收窗口的数值。假设每一个报文段为100字节长，而数据报文段序号的初始值设为1。
 
-     ![20210407025315865](20210407025315865.png)
+     ![20210407025315865](image/20210407025315865.png)
 
      从图中可以看出，B进行了三次流量控制。第一次把窗口减少到 rwnd = 300 ，第二次又减到了 rwnd = 100 ，最后减到 rwnd = 0 ，即不允许发送方再发送数据了。这种使发送方暂停发送的状态将持续到主机B重新发出一个新的窗口值为止。B向A发送的三个报文段都设置了 ACK = 1 ，只有在 ACK=1 时确认号字段才有意义。
 
@@ -730,7 +730,7 @@
 
     ​	无论在慢开始阶段还是在拥塞避免阶段，只要网络出现拥塞（其根据就是没有收到确认），就要把慢开始门限ssthresh设置为出现拥塞时的拥塞窗口值的一半（但不能小于2）。然后把拥塞窗口cwnd 设置为1，执行慢开始算法。这样做的目的就是要迅速减少主机发送到网络中的数据量，使得发生拥塞的路由器有足够时间把队列中积压的数据处理完毕。过程图如下：
 
-    ​	![2018121723484179](2018121723484179.png)
+    ​	![2018121723484179](image/2018121723484179.png)
 
     ### （3）快重传算法：
 
@@ -738,13 +738,13 @@
 
     ​		接收方收到了M1和M2后都分别发出了确认。现在假定接收方没有收到M3但接着收到了M4。显然，接收方不能确认M4，因为M4是收到的失序报文段。根据可靠传输原理，接收方可以什么都不做，也可以在适当时机发送一次对M2的确认。但按照快重传算法的规定，接收方应及时发送对M2的重复确认，这样做可以让 发送方及早知道报文段M3没有到达接收方。发送方接着发送了M5和M6。接收方收到这两个报文后，也还要再次发出对M2的重复确认。这样，发送方共收到了 接收方的四个对M2的确认，其中后三个都是重复确认。
 
-    ![20181217235621596](20181217235621596.jpg)
+    ![20181217235621596](image/20181217235621596.jpg)
 
     ### （4）快恢复算法：
 
     ​	与快重传配合使用的还有快恢复算法，当发送方连续收到三个重复确认时，就执行“乘法减少”算法，把ssthresh门限设置为拥塞窗口cwnd的一半，但是接下去并不执行慢开始算法，而是将cwnd设置为ssthresh的大小，然后执行拥塞避免算法：因为如果网络出现拥塞的话，就不会收到好几个重复的确认，所以发送方现在认为网络可能没有出现拥塞，所以此时并不执行慢开始算法，而是执行拥塞避免算法。
 
-    ![20181218000513677](20181218000513677.jpg)
+    ![20181218000513677](image/20181218000513677.jpg)
 
       
 
